design der tasks ueberarbeitet

--- a/views/workspace.html
+++ b/views/workspace.html
@@ -3,7 +3,7 @@
 	<div class="five wide column" ng-repeat="list in columns">
 		<div class="ui stacked segment">
 			<h4 class="ui header">{{list.listName}}</h4>
-			<div class="ui middle aligned divided list"
+			<div class="ui list"
 				dragula='"common"'
 				dragula-model="list.items"
 				dragula-scope="$parent"
@@ -12,11 +12,14 @@
 				<div class="item"
 					data-id="{{item.id}}"
 					ng-repeat="item in list.items">
-			        <div class="right floated content">
-			        	<div class="ui red button" ng-click="delete(item)">Löschen</div>
-			        </div>
-			        <img class="ui avatar image" src="app/images/push-pin.png">
-					<div class="content">{{item.title}}</div>
+					<div class="ui clearing red segment">
+				        <div class="right floated content">
+				        	<div class="mini ui red icon button" ng-click="delete(item)">
+				        		<i class="trash icon"></i>
+				        	</div>
+				        </div>
+						<div class="content">{{item.title}}</div>
+					</div>
 				</div>
 				
 			</div>
