--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,10 @@
             <label>Benutzername</label>
             <input type="text" name="login" ng-model="username" />    
         </div>
-        <button class="ui button" ng-click="login(username)">Login</button>    
+        <div class="field">
+        	<label>Passwort</label>
+        	<input type="password" name="password" ng-model="password" />
+        </div>
+        <button class="ui button" ng-click="login(username, password)">Login</button>    
     </div>
 </div>
