--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,4 @@
-<h3 class="ui top attached header">Login</h1>
+<h3 class="ui top attached header">Registrierung</h1>
 <div class="ui attached segment">
     <div class="ui form">
         <div class="field">
@@ -9,8 +9,6 @@
         	<label>Passwort</label>
         	<input type="password" name="password" ng-model="password" />
         </div>
-        <button class="ui button" ng-click="login(username, password)">Login</button>
+        <button class="ui button" ng-click="register(username, password)">Absenden</button>    
     </div>
-
-    <a href="#/register">Registrierung</a>
 </div>
