--- a/views/login.html
+++ b/views/login.html
@@ -1,14 +1,14 @@
 <h3 class="ui top attached header">Login</h1>
 <div class="ui attached segment">
-    <div class="ui form">
+    <form class="ui form">
         <div class="field">
+        </div>
             <label>Benutzername</label>
             <input type="text" name="login" ng-model="username" />    
-        </div>
         <div class="field">
         	<label>Passwort</label>
         	<input type="password" name="password" ng-model="password" />
         </div>
-        <button class="ui button" ng-click="login(username, password)">Login</button>    
-    </div>
+        <button type="submit" class="ui button" ng-click="login(username, password)">Login</button>
+    </form>
 </div>
